--- a/client/src/components/styles/Home.module.css
+++ b/client/src/components/styles/Home.module.css
@@ -1,81 +1,66 @@
-.contenedorPadre {
+.divFiltroPaginadoRangoPrecio {
+    display: flex;
+    justify-content:space-between;
+    margin: 0px 30px;
+}
+
+.divFiltros {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 500px;
+    margin-top: 22px;
+    margin-left: 60px;
+}
+
+.botonFiltro {
+    justify-content: center;
+    width: 100px;
+    font-size: 17px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+}
+
+.botonFiltro:hover {
+    color: rgba(0, 0, 0, 0.603);
+}
+
+.svgFiltro {
+    height: 15px;
+    width: 20px;
+    margin-right: 5px;
+}
+
+.divSelectPrecioYSvg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.divSelectPrecioYSvg select {
+    border: none;
+    background-color: white;
+    font-size: 17px;
+    font-weight: 600;
+    margin-bottom: 16px;
+    cursor: pointer;
+}
+
+.svgSelect {
+    height: 20px;
+    margin-right: 5px;
+    margin-bottom: 22px;
+}
+
+.divContenedorPadre {
     display: flex;
     background-color: rgba(229 231 235);
-    padding-left: 60px; 
+}
+
+.divMargenContenedor {
+    padding-left: 60px;  
     padding-right: 60px;
-}
-
-.contenedorCard {
-    display: inline-flex;
-    flex-wrap: wrap;
-    background-color: rgb(255 255 255);
-    border-radius: 0.5rem;
-    width: 250px;
-    height: 360px;
-    margin: 20px 10px;
-    padding: 16px;
-    overflow: hidden;
-}
-
-.contenedorCard:hover {
-    cursor: pointer;
-    transform: scale(1.03);
-}
-
-.card {
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.titulo {
-    font-size: 20px;
-    width: 250px;
-}
-
-.imagen {
-    margin-top: 10px;
-    margin-left: 24px;
-    width: 200px;
-    object-fit: contain;
-}
-
-.precioYStock {
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.precio {
-    font-weight: 600;
-}
-
-.stock {
-    font-weight: 500;
-    color: gray;
-}
-
-.svg {
-    height: 16px;
-    width: 16px;
-    justify-content: center;
-    align-items: center;
-}
-
-.button {
-    display: flex;
-    background-color: rgba(31, 41, 55, 0.884);
-    border: none;
-    color: white;
-    font-size: 15px;
-    font-weight: 700;
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-    height: 25px;
-    cursor: pointer;
-}
-
-.button:hover {
-    cursor: pointer;
-    transform: scale(1.03);
 }
