--- a/client/src/components/styles/Modal.module.css
+++ b/client/src/components/styles/Modal.module.css
@@ -13,7 +13,8 @@
 
 .contenedorModal {
     width: 500px;
-    min-height: 100px;
+    max-height: 570px;
+    overflow-y: auto;
     background-color:rgb(203 213 225);
     position: relative;
     border-radius: 5px;
@@ -40,8 +41,7 @@
     height: 30px;
     border: none;
     background-color: none;
-    cursor: pointer;
-    transition: .3s ease all;
+    cursor: pointer;transition: .3s ease all;
     border-radius: 5px;
     color: black;
 }
@@ -79,6 +79,14 @@
     height: 30px;
     margin-bottom: 20px;
     font-size: 16px;
+}
+
+.contenido select {
+    width: 81%;
+    height: 35px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .divButtonConfirmar {
