--- a/client/src/components/styles/Modal.module.css
+++ b/client/src/components/styles/Modal.module.css
@@ -60,9 +60,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 230px;
 }
 
 .contenido h2 {
+    display: flex;
+    justify-content: center;
     border-bottom: 2px solid gray;
     margin-bottom: 30px;
 }
@@ -82,11 +85,16 @@
 }
 
 .contenido select {
-    width: 81%;
-    height: 35px;
+    width: 173%;
+    height: 38px;
     margin-bottom: 20px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.contenido img {
+    width: 150px;
+    margin-bottom: 20px;
 }
 
 .divButtonConfirmar {
