--- a/client/src/components/styles/FeaturedProducts.module.css
+++ b/client/src/components/styles/FeaturedProducts.module.css
@@ -1,17 +1,33 @@
- .contenedor {
+.contenedor {
     background-color: rgb(255 255 255);
 }
 
-.margen {
-    margin-bottom: 20px;
+.titulo {
     display: flex;
+    justify-content: center;
+}
+
+.margen {
+    display: flex;
+    position: relative;
+    margin-bottom: 20px;
     justify-content: center;
     align-items: center;
     border-top: 2px solid  rgba(229 231 235);
     border-bottom: 2px solid  rgba(229 231 235);
 }
 
-.svg {
+.svgIzq {
+    position: absolute;
+    left: 12%;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
+
+.svgDer {
+    position: absolute;
+    right: 8%;
     height: 20px;
     width: 20px;
     cursor: pointer;
@@ -34,8 +50,7 @@
 }
 
 .imagen {
-    height: 150px;
-    width: 150px;
+    margin-left: 27px;
 }
 
 .ventas {
@@ -44,15 +59,102 @@
     font-weight: 500;
 }
 
-.titulo {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
+.svg {
+    animation: spin 1s linear infinite;
+    height: 20px;
+    width: 20px;
+    color: rgb(75 85 99);
 }
 
-.cargando {
+.opacity {
+    opacity: 0.25;
+}
+
+.path {
+    opacity: 0.75;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+    transform: rotate(360deg);
+    }
+}
+
+/* .contenedor {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.margenContenedorProductos {
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    border-top: 2px solid rgba(229 231 235);
+    border-bottom: 2px solid rgba(229 231 235);
+    width: 100%;
+    max-height: 190px;
+    padding: 10px;
+    margin-bottom: 20px;
 }
+
+.contenedorProductosDestacados {
+    display: flex;
+    justify-content: center;
+    max-width: 70%;
+}
+
+.productos {
+    display: flex;
+    align-items: center;
+    width: 17%;
+    margin-left: 20px;
+
+}
+
+.productosDatos {
+    width: 100%; 
+}
+
+.productosDatos img {
+    padding-left: 37px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.svgIzq {
+    position: absolute;
+    margin-top: 80px;
+    left: 200px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
+
+.svgDer {
+    position: absolute;
+    margin-top: 80px;
+    right: 190px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
+
+.nombre {
+    overflow: hidden;
+    white-space: nowrap;
+    color: black;
+    font-weight: 600;
+}
+
+.pVentas {
+    display: flex;
+    justify-content: center;
+}
+
+*/
 
