--- a/client/src/components/styles/Home.module.css
+++ b/client/src/components/styles/Home.module.css
@@ -4,15 +4,6 @@
     margin: 0px 30px;
 }
 
-.divFiltros {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    height: 500px;
-    margin-top: 22px;
-    margin-left: 60px;
-}
-
 .botonFiltro {
     justify-content: center;
     width: 100px;
@@ -25,7 +16,7 @@
 }
 
 .botonFiltro:hover {
-    color: rgba(0, 0, 0, 0.603);
+    border: 1px solid black;
 }
 
 .svgFiltro {
@@ -55,12 +46,8 @@
     margin-bottom: 22px;
 }
 
-.divContenedorPadre {
-    display: flex;
+.contenedorCard { 
     background-color: rgba(229 231 235);
-}
-
-.divMargenContenedor {
-    padding-left: 60px;  
-    padding-right: 60px;
+    max-width: 100%;
+    flex-wrap: wrap;
 }
