--- a/client/src/components/styles/PanelGeneral.module.css
+++ b/client/src/components/styles/PanelGeneral.module.css
@@ -1,19 +1,12 @@
 .table {
   display: table;
   width: 100%;
-  margin-left: 150px;
-}
-
-.thead {
-  background-color: rgb(243 244 246);
-  border-bottom-width: 2px;
-  border-color: rgb(229 231 235);
 }
 
 .th {
   border-width: 1px;
   border-color: rgb(209 213 219);
-  padding: 16px;
+  padding: 15px;
   font-size: 14px;
   line-height: 20px; 
   font-weight: 600;
@@ -30,12 +23,12 @@ tr:nth-child(odd) {
 }
 
 .td {
-  border-width: 1px;
   border-color: rgb(229 231 235);
   padding: 12px;
-  font-size: 14px;
+  font-size: 15px;
   line-height: 20px;
   color: black;
+  text-align: center;
 }
 
 .svg {
@@ -46,7 +39,113 @@ tr:nth-child(odd) {
 
 .spinner {
   margin-top: 50px;
-  margin-left: 600px;
   width: 100%;
   height: 20vh;
+}
+
+.divSuperior {
+  display: flex;
+  justify-content:space-between;
+}
+
+.divSuperior input {
+  width: 120px;
+  height: 30px;
+  background-color: #D0D3D4;
+  color: black;
+  border: none;
+  font-size: 15px;
+  font-weight: 700;
+  padding-left: 5px;
+}
+
+.buttonCrearProducto {
+  width: 146px;
+  height: 30px;
+  color: black(75, 70, 70);
+  border: none;
+  font-size: 15px;
+  background-color: #454545;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.divSuperior select {
+  display: flex;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  width: 85px;
+  height: 32.4px;
+  margin-right: 50px;
+  background-color: #D0D3D4;
+  color: black;
+  font-size: 15px;
+  cursor: pointer;
+  border: none;
+}
+
+.divBuscarProducto {
+  display: flex;
+}
+
+.divSuperiorOrdenYUsuario {
+  display: flex;
+  justify-content: space-between;
+}
+
+.divSuperiorOrdenYUsuario select {
+  display: flex;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  width: 105px;
+  height: 32.4px;
+  margin-right: 50px;
+  background-color: #D0D3D4;
+  color: black;
+  font-size: 15px;
+  cursor: pointer;
+  border: none;
+}
+
+.buttonTodosLosUsuarios {
+  width: 60px;
+  color: black(75, 70, 70);
+  border: none;
+  font-size: 15px;
+  background-color: #D0D3D4;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.divBuscarOrdenYUsuario {
+  display: flex;
+}
+
+.divBuscarOrdenYUsuario input {
+  width: 120px;
+  height: 30px;
+  background-color: #D0D3D4;
+  color: black;
+  border: none;
+  font-size: 15px;
+  font-weight: 700;
+  padding-left: 5px;
+}
+
+.buttonBuscar {
+  border: none;
+  background-color: #D0D3D4;
+}
+
+.sinOrdenes {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+}
+
+.selecttt {
+  max-width: 100%;
 }
