--- a/client/src/components/styles/PanelGeneralUser.module.css
+++ b/client/src/components/styles/PanelGeneralUser.module.css
@@ -19,6 +19,7 @@
 .contenedorDatos {
   display: flex;
   align-items: center;
+  height: 40px;
 }
 
 .contenedorDatos p {
@@ -93,7 +94,9 @@
   margin-top: 5px;
 }
 
-/*MIS COMPRAS*/
+.contenedorHeight {
+  margin-top: 30px;
+}
 
 .contenedorPadre {
   display: flex;
@@ -104,7 +107,7 @@
 .divContenedorDatos {
   display: flex;
   flex-direction: row;
-  border: 2px solid gray;
+  border: 2px solid black;
   margin-bottom: 40px;
   margin: 20px;
 }
@@ -115,8 +118,7 @@
   align-items: center;
   width: 850px;
   padding-left: 50px;
-  background-color: rgba(0, 0, 255, 0.281);
-
+  background-color: rgba(128, 128, 128, 0.144);
 }
 
 .divProductos {
@@ -125,6 +127,10 @@
   width: 250px;
   margin-right: 20px;
   padding: 10px;
+}
+
+.divProductos h4 {
+  color: black;
 }
 
 .divProductos img {
@@ -148,9 +154,8 @@
   flex-direction: column;
   align-items: center;
   width: 700px;
-  background-color: lightblue;
-  background-color: rgba(0, 0, 255, 0.281);
-  border-right: 1px solid gray;
+  background-color: rgba(128, 128, 128, 0.144);
+  border-right: 1px solid black;
 }
 
 .contenedorOrden p {
@@ -161,15 +166,14 @@
 
 .divComentario {
   display: flex;
-  justify-content: center;
+  margin-right: 48px;
 }
 
 .textarea {
   height: 50px;
-  width: 110vh;
+  width: 100vh;
   display: flex;
-  margin-bottom: 10px;
-  margin-right: 48px;
+  /* margin-right: 48px; */
   font-size: 20px;
   background-color: white;
   resize: none;
@@ -192,4 +196,24 @@
 .sinOrdenes p {
   font-size: 30px;
   font-weight: 550;
+}
+
+.contenedorComentarioPrincipal {
+  display: flex;
+  flex-direction: column;
+}
+
+.contenedorComentario {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.contenedorComentario button {
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  background-color: none;
+  border: none;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
