--- a/client/src/components/styles/Home.module.css
+++ b/client/src/components/styles/Home.module.css
@@ -16,7 +16,8 @@
 }
 
 .botonFiltro:hover {
-    border: 1px solid black;
+    border: 2px solid black; 
+    border-radius: 10px; 
 }
 
 .svgFiltro {
