--- a/client/src/components/styles/Favorites.module.css
+++ b/client/src/components/styles/Favorites.module.css
@@ -50,6 +50,7 @@
 }
 
 .titulo {
+  color: black;
   font-size: 20px;
   width: 250px;
 }
@@ -117,4 +118,8 @@
 .sinFavoritos {
   display: flex;
   margin-left: 75px;
+}
+
+.link {
+  text-decoration: none;
 }
