--- a/client/src/components/styles/Card.module.css
+++ b/client/src/components/styles/Card.module.css
@@ -57,7 +57,7 @@
     overflow: hidden;
     white-space: nowrap;
     padding: 10px 0px;
-    width: 90%;
+    width: 90%; 
     max-width: 90%;
     margin: 0px auto;
 }
@@ -107,7 +107,17 @@
     width: 100%;
 }
 
-.divBoton button {
+.botonDesactivado {
+    width: 100%;
+    height: 30px;
+    font-size: 15px;
+    font-weight: 700;
+    border: none;
+    color: white;
+    background-color: rgba(255, 166, 0, 0.582);
+}
+
+.botonActivado {
     width: 100%;
     height: 30px;
     font-size: 15px;
@@ -118,7 +128,7 @@
     cursor: pointer;
 }
 
-.divBoton button:hover {
+.botonActivado:hover {
     cursor: pointer;
     transform: scale(1.01);
 }
